# e-ai_ml2

./: .gitignore  README.md
course/code/: .gitignore
course/code/code01/: dict_and_json.py  earth-system-simulation.py  flow-control.py  log-run.py  lorenz63-seaborn.py  lorenz63.py  matrix_vector.py  normalize.py  output.txt  plot-2d-field.py  plot-3d.py  plot-gaussian-modulated-cosine-field.py  plot-sine-wave.py  plot_3d-surface.py  python_basics_3_plotting.ipynb  python_basics_5_oop_standard_libs.ipynb  requirements.txt  slicing_masks.py
course/code/code15/anemoi/cbcf/: README.md  main.py  pyproject.toml
course/code/code15/anemoi/cbcf/anemoi-core/: NOTICE.md
course/code/code15/anemoi/cbcf/anemoi-core/LICENCES/: APPLE_ML_ACKNOWLEDGEMENTS  APPLE_ML_ADEMAMIX_LICENSE
course/code/code15/anemoi/cbcf/anemoi-core/graphs/: pyproject.toml
course/code/code15/anemoi/cbcf/anemoi-core/models/src/anemoi_models.egg-info/: SOURCES.txt
course/code/code15/anemoi/cbcf/anemoi-core/training/: pyproject.toml
course/code/code15/anemoi/cbcf/anemoi-core/training/src/anemoi/training/schemas/: training.py
course/code/code15/anemoi/cbcf/anemoi-core/training/src/anemoi/training/train/tasks/: __init__.py  diagnoser.py
course/code/code15/anemoi/cbcf/anemoi-datasets/: pyproject.toml
course/code/code15/anemoi/cbcf/anemoi-transform/: pyproject.toml
course/code/code15/anemoi/cbcf/training_config/: cbcf_diagnose_R3B5.yaml  cbcf_diagnose_R3B8.yaml  cbcf_graph_R3B5.yaml  cbcf_graph_R3B8.yaml  none
course/lectures/: all.txt  cat_lectures.sh  create.py  lec_agenda.tex  lec_macros.tex
(+1409 files in other folders)
